@@ -3,7 +3,7 @@
   "version": "1.0.1",
   "title": "Simple Area Screenshots",
   "author": "Wiwiweb",
-  "dependencies": ["base >= 2.0.0"],
+  "dependencies": ["base >= 2.0.16"],
   "factorio_version": "2.0",
   "package": {
     "ignore": [
