@@ -8,6 +8,7 @@ simple-area-screenshots=Draw a rectangle with your mouse, and get a pixel-perfec
 sas-filetype=File type
 sas-jpg-quality=JPEG quality
 sas-alt-mode=Show Alt-mode
+sas-hide-clouds-and-fog=Hide clouds and fog
 sas-daytime=Daytime
 sas-anti-alias=Anti-alias
 sas-autozoom-target-px=Auto-zoom target screenshot size (px)
@@ -15,6 +16,7 @@ sas-autozoom-target-px=Auto-zoom target screenshot size (px)
 [mod-setting-description]
 sas-filetype=JPEG has smaller files, PNG is higher quality.
 sas-jpg-quality=The JPEG render quality as a percentage (from 0% to 100%). A lower value means a more compressed image. Doesn't do anything if you select PNG.
+sas-hide-clouds-and-fog=Hide cloud shadows on the ground, fog, and also foreground space dust. 
 sas-anti-alias=Render in double resolution and downscale the result. Makes things look less pixelated while keeping the resolution and filesize of the final screenshot the same. However the maximum resolution allowed is lowered to 8192x8192 instead of 16384x16384.
 sas-autozoom-target-px=Auto-zoom will try to get a screenshot as close as possible to this size.
 
